--- a/AUTHORS
+++ b/AUTHORS
@@ -5,11 +5,10 @@ various contributors:
 Development Lead
 ----------------
 
-- Carlos Henrique <gandarez@gmail.com>
+- Carlos Henrique Guardão Gandarez <gandarez@gmail.com>
 
 
 Patches and Suggestions
 -----------------------
 
 - Alan Hamlett <alan.hamlett@gmail.com>
-
